# SuperRustBoy-Apple

./: .gitignore  README.md
.github/workflows/: iOS.yml  macOS.yml
CommonUI/: ActionButton.swift  Arrow.swift  ContentView.swift  DPad.swift  Display.swift  EmptyInstantiable.swift  NSObject+apply.swift  NSObjectProtocol+apply.swift  RustBoy+ActionButtonListener.swift  RustBoyButton.swift  RustBoyView.swift
RustBoy/: RustBoy+EmptyInstantiable.swift  RustBoy.swift
RustBoy/UI/: Display.swift  RustBoyButton.swift  RustBoyView.swift
SNES/: SNES+GameControllerReceiver.swift  SNES+KeyboardReceiver.swift  SNES.swift  SNESView.swift
Speaker/: Speaker.swift
SuperRustBoy/: ActionButton.swift  AppDelegate.swift  ContentView.swift  Info.plist  RustBoy.swift  module.modulemap
SuperRustBoy-AppKit/: AppDelegate.swift  module.modulemap
SuperRustBoy-iOS/: AppDelegate.swift  SceneDelegate.swift
SuperRustBoy.xcodeproj/: project.pbxproj
SuperRustBoy.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SuperRustBoy.xcworkspace/: contents.xcworkspacedata
SuperRustBoy/Base.lproj/: Main.storyboard
SuperRustBoy/CommonUI/: ContentView.swift  DPad.swift
SuperRustBoy/Emulator/: Display.swift  Emulator.swift  PlayerIndices.swift
SuperRustBoy/GBA/: GBA+GameControllerReceiver.swift  GBA+KeyboardReceiver.swift  (+1 more)
Utils/: C-Interop.swift
snes_c_binding/: Cargo.toml
snes_c_binding/headers/: snes.h
snes_c_binding/snes_c_binding.xcodeproj/: project.pbxproj
snes_c_binding/snes_c_binding.xcodeproj/xcshareddata/xcschemes/: Cargo iOS.xcscheme  snes_c_binding-iOS.xcscheme  snes_c_binding-macOS.xcscheme  snes_c_binding-staticlib-iOS.xcscheme  snes_c_binding-staticlib.xcscheme
snes_c_binding/src/: lib.rs
spa_c_binding/: Cargo.toml  cbindgen.toml
spa_c_binding/headers/: gba.h
spa_c_binding/spa_c_binding.xcodeproj/: project.pbxproj
spa_c_binding/src/: lib.rs
super_rust_boy_c_binding/: .gitignore  Cargo.toml  cbindgen.toml
super_rust_boy_c_binding/headers/: rustboy.h
super_rust_boy_c_binding/rustboy_c_binding.xcodeproj/: project.pbxproj
super_rust_boy_c_binding/rustboy_c_binding.xcodeproj/xcshareddata/xcschemes/: Cargo iOS.xcscheme  rustboy_c_binding-iOS.xcscheme  rustboy_c_binding-macOS.xcscheme
super_rust_boy_c_binding/src/: lib.rs
(+37 files in other folders)
