[package]
name = "rustboy_c_binding"
version = "0.1.0"
authors = ["SeanAsby <seanasbjornsen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustboy_c_binding"
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
rustboy = { path = "../../super-rust-boy" }
winit = "0.19"
