[package]
name = "rustboy_c_binding"
version = "0.1.0"
authors = ["SeanAsby <seanasbjornsen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustboy_c_binding"
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
rustboy = { git = "https://github.com/super-rust-boy/super-rust-boy.git", branch = "feature/CPU_renderer_disabled_audio" }
